next version <kevin@koconnor.net>

  * The linload build support has been modified to support linking in
    a haret script.  The last line in the script should run the new
    "RAMBOOT" command.  An example build would look something like:

    make linload SCRIPT=myharet.txt KERNEL=zImage INITRD=abc

  * Add new machines: hermes, wizard, g500

  * Add mechanism to check for DMA corruption during kernel load by
    CRCing the kernel before and after the preloader relocates it.  To
    enable, send the command "set kernelcrc 1" before booting.

20061205 0.4.5 <kevin@koconnor.net>

  * Support memory polling commands (WATCH/ADDWATCH).  This will allow
    one to poll an area of memory and check for changes.  The "wi"
    command has also been extended to support memory polling during
    interrupt and trace/breakpoint events (see ADDIRQWATCH /
    ADDTRACEWATCH).

  * Support multiple simultaneous network connections to haret.  This
    can be invoked by calling the new "network <port>" haret command.
    Having multiple telnet windows can be useful when using haret to
    invoke a wince action while simultaneously tracing the results.
    Warning - most of haret is not thread-safe, so care should be
    taken to not run intricate commands simultaneously.

  * Add new machine: jornada820

  * Add new commands: LOG, UNLOG, PS, KILL, LOADLIBRARYEX, NLEDSET,
    LSMOD, POWERMON

  * Removed support for command-line options "-r" and "-k".  These
    options are superseded by the linload.exe program and the command
    "KILL".  This was done, in part, because the "-k" option required
    toolhelp.dll which may not be present on old PDAs.

20061118 0.4.4 <kevin@koconnor.net>

  * Add ability to bind haret, kernel, and initrd into a single exe.
    This is done by running:

    make linload CMDLINE="xx" KERNEL=zImage INITRD=abc

    A file out/linload.exe will be created.  Running this on a pda
    will launch the specified kernel.  This feature may be useful for